--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.5.2",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "@walletconnect/web3-provider": "^1.8.0",
     "bootstrap": "^5.2.1",
-    "react": "^18.2.0",
+    "ethers": "^5.7.0",
+    "react": "17.0.2",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "17.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.0",
     "web-vitals": "^2.1.4",
     "web3modal": "^1.9.9"
   },
